--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,9 @@ hyperframe==6.0.1
 idna==3.6
 Jinja2==3.1.3
 joblib==1.3.2
+langchain==0.1.4
+langchain-community==0.0.16
+langchain-core==0.1.17
 MarkupSafe==2.1.3
 mpmath==1.3.0
 networkx==3.2.1
