--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ portalocker==2.8.2
 protobuf==4.25.2
 pydantic==2.5.3
 pydantic_core==2.14.6
+pypdf==4.0.1
 PyYAML==6.0.1
 qdrant-client==1.7.0
 regex==2023.12.25
